--- a/MobileApp/MobileApp/MobileApp/Views/HomePage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/HomePage.xaml
@@ -26,7 +26,9 @@
     </ContentPage.Resources>
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Logout"
+        <ToolbarItem 
+            x:Name="logoutBtn"
+            Text="Logout"
                  Order="Primary"
                  Priority="0" 
                  Command="{Binding Logout}"/>
