--- a/MobileApp/MobileApp/MobileApp/App.xaml
+++ b/MobileApp/MobileApp/MobileApp/App.xaml
@@ -166,24 +166,32 @@
                                     <ColumnDefinition Width="100"/>
                                     <!--<ColumnDefinition Width="2*"/>-->
                                     <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="75"/>
                                 </Grid.ColumnDefinitions>
                                 <!-- scale image to fit the view (won't be cropped to fill view) -->
                                 <Image Grid.RowSpan="3"
                                    Source="{Binding ImageUrl}" 
                                    Aspect="AspectFit"
                                    HeightRequest="10"/>
-                                <Label Margin="10,0,0,0" Grid.Column="1"
+                                <Label Margin="10,0,0,0" Grid.Column="1" Grid.ColumnSpan="2"
                                    Text="{Binding Name}" 
                                    FontAttributes="Bold" 
                                    TextColor="Black"
-                                   FontSize="23"/>
+                                   FontSize="23" Padding="0"/>
                                 <Label Margin="10,0,0,0" Grid.Column="1" Grid.Row="1"
                                        Text="{Binding Price, StringFormat='Price: £{0}'}"
                                        VerticalOptions="End" 
                                        TextColor="Black"
                                        FontSize="22"
                                        />
-                                <Label Margin="10,0,0,0" Grid.Column="1" Grid.Row="2"
+                                <Label Margin="0" Grid.Column="2" Grid.Row="1"
+                                       Text="{Binding Quantity, StringFormat='Qty: {0}'}"
+                                       VerticalOptions="End" 
+                                       HorizontalOptions="Center"
+                                       HorizontalTextAlignment="Center"
+                                       TextColor="Black"
+                                       FontSize="22"/>
+                                <Label Margin="10,0,0,0" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2"
                                        Text="{Binding DeliveryDate, StringFormat='Estimated: {0:dd/MM/yy}'}"
                                        VerticalOptions="End" 
                                        TextColor="Black"
@@ -229,25 +237,25 @@
                     <Frame BorderColor="#D8DAE0" CornerRadius="20" HasShadow="True" Padding="0,10">
                         <Grid Padding="0">
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="55"/>
                                 <RowDefinition Height="Auto"/>
                                 <!--<RowDefinition Height="5"/>-->
                             </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="1.2*"/>
                                 <ColumnDefinition Width="2*"/>
-                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="80"/>
                             </Grid.ColumnDefinitions>
                             <!-- scale image to fit the view (won't be cropped to fill view) -->
                             <Image Grid.RowSpan="2"
                                Source="{Binding ImageUrl}" 
                                Aspect="AspectFit"
                                HeightRequest="80"/>
-                            <Label Margin="5,0,0,0" Grid.Column="1" Grid.ColumnSpan="2"
+                            <Label Margin="5,0,0,0" Grid.Column="1" Grid.ColumnSpan="1"
                                Text="{Binding Name}" 
                                FontAttributes="Bold" 
                                TextColor="Black"
-                               FontSize="28"/>
+                               FontSize="22"/>
                             <Label Margin="5,0,0,0" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="1" 
                                    Text="{Binding Price,StringFormat='Price: £{0}'}"
                                    FontSize="24"
@@ -317,7 +325,6 @@
                                      Grid.Row="1"
                                      Grid.ColumnSpan="7"
                                      Margin="0"/>
-                            <!--<Image />-->
                             <Image 
                                 Grid.Column="0"
                                 Grid.Row="2"
@@ -362,8 +369,6 @@
                                     HorizontalTextAlignment="Center"
                                     VerticalTextAlignment="Center"
                                    />
-
-                                <!--Text="{Binding theOrders.Count}"-->
                             </Frame>
                         </Grid>
                     </Frame>
