--- a/MobileApp/MobileApp/MobileApp/Views/OrdersPage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/OrdersPage.xaml
@@ -30,7 +30,7 @@
 
 
             <!-- separator line -->
-            <BoxView Style="{StaticResource SeparatorLineStyle}"/>
+            <!--<BoxView Style="{StaticResource SeparatorLineStyle}"/>-->
 
             <!-- flex box to display total price label next to value binding -->
             <!--<FlexLayout>
@@ -38,7 +38,7 @@
                 <Label Text="{Binding TotalPrice}" FontSize="Large"
                     Style="{DynamicResource BodyStyle}" TextColor="Black"/>
             </FlexLayout>-->
-            <Button Text="load" Command="{Binding load}"/>
+            <!--<Button Text="load" Command="{Binding load}"/>-->
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
