--- a/MobileApp/MobileApp/MobileApp/AppShell.xaml
+++ b/MobileApp/MobileApp/MobileApp/AppShell.xaml
@@ -97,23 +97,23 @@
 
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
 
-    <MenuItem Text="My Details" StyleClass="MenuItemLayoutStyle" Clicked="ClickedDetailsMenuItem">
-    </MenuItem>
-    
-    <MenuItem Text="Orders" StyleClass="MenuItemLayoutStyle" Clicked="ClickedOrdersMenuItem">
-    </MenuItem>
-    
     <MenuItem Text="Basket" StyleClass="MenuItemLayoutStyle" Clicked="ClickedBasketMenuItem">
+    </MenuItem>
+
+    <MenuItem Text="Orders" StyleClass="MenuItemLayoutStyle" Clicked="ClickedOrdersMenuItem">
     </MenuItem>
 
     <MenuItem Text="Login" StyleClass="MenuItemLayoutStyle" Clicked="ClickedLoginMenuItem">
     </MenuItem>
-
-    <MenuItem Text="Reset Password" StyleClass="MenuItemLayoutStyle" Clicked="ClickedResetPasswordMenuItem">
-    </MenuItem>
     
-    <MenuItem Text="SignUp" StyleClass="MenuItemLayoutStyle" Clicked="ClickedSignUpMenuItem">
+    <MenuItem Text="My Details" StyleClass="MenuItemLayoutStyle" Clicked="ClickedDetailsMenuItem">
     </MenuItem>
+
+    <!--<MenuItem Text="Reset Password" StyleClass="MenuItemLayoutStyle" Clicked="ClickedResetPasswordMenuItem">
+    </MenuItem>-->
+    
+    <!--<MenuItem Text="SignUp" StyleClass="MenuItemLayoutStyle" Clicked="ClickedSignUpMenuItem">
+    </MenuItem>-->
 
     <!--<MenuItem Text="Logout" StyleClass="MenuItemLayoutStyle" Clicked="OnMenuItemClicked">
     </MenuItem>-->
