Fixed basket db and improved login system

--- a/MobileApp/MobileApp/MobileApp/Views/EditPasswordPage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/EditPasswordPage.xaml
@@ -14,9 +14,9 @@
                 </Frame>-->
 
                 <Label Text="New Password" FontSize="Large" TextColor="Black"/>
-                <!--<Frame CornerRadius="20" BorderColor="LightGray" HasShadow="True" Padding="10,0"  Margin="0,10">-->
+                <Frame CornerRadius="20" BorderColor="LightGray" HasShadow="True" Padding="10,0"  Margin="0,10">
                     <Entry x:Name="newPasswordEntry" Text="{Binding NewPassword}" Placeholder="Password" FontSize="Large" IsPassword="True" TextColor="Black"/>
-                <!--</Frame>-->
+                </Frame>
 
                 <Label Text="Confirm New Password" FontSize="Large" TextColor="Black"/>
                 <Frame CornerRadius="20" BorderColor="LightGray" HasShadow="True" Padding="10,0"  Margin="0,10">
