--- a/MobileApp/MobileApp/MobileApp/Views/ProductPage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/ProductPage.xaml
@@ -154,11 +154,11 @@
                         <Button Text="{StaticResource IconStar}" FontFamily="FA-S" FontSize="20" TextColor="{Binding RStarColor5}" WidthRequest="30" HeightRequest="30" Padding="0" BackgroundColor="Transparent" BorderColor="Transparent" Command="{Binding SelectRatingCommand}" CommandParameter="5"/>
                     </FlexLayout>
                     <Frame BorderColor="LightGray" CornerRadius="20" Padding="10,0" HasShadow="True" Margin="0,10">
-                        <Entry Text="{Binding RTitle}" Placeholder="Title" PlaceholderColor="DarkGray" FontSize="28" TextColor="Black" BackgroundColor="White"/>
+                        <Entry x:Name="RTitle" Text="{Binding RTitle}" Placeholder="Title" PlaceholderColor="DarkGray" FontSize="28" TextColor="Black" BackgroundColor="White"/>
                     </Frame>
                     
                     <Frame BorderColor="LightGray" CornerRadius="20" Padding="10,0" HasShadow="True">
-                        <Editor Text="{Binding RDescription}" Placeholder="Description" PlaceholderColor="DarkGray" FontSize="28" TextColor="Black" HeightRequest="200" BackgroundColor="White"/>
+                        <Editor x:Name="RDescription" Text="{Binding RDescription}" Placeholder="Description" PlaceholderColor="DarkGray" FontSize="28" TextColor="Black" HeightRequest="200" BackgroundColor="White"/>
                     </Frame>
                     <Button Text="Done" Command="{Binding WriteReview}" Clicked="DoneReview_Clicked"/>
                 </StackLayout>
