--- a/MobileApp/MobileApp/MobileApp/Views/LoginPage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/LoginPage.xaml
@@ -25,8 +25,8 @@
             <BoxView Style="{StaticResource SeparatorLineStyle}" Margin="0,0,0,0"/>
             <!--<Label x:Name="messageLabel"/>-->
             <Grid ColumnDefinitions="*,*" Margin="0,5">
-                <Button WidthRequest="165" Text="Sign Up" Command="{Binding GoSignUpPage}" FontSize="18" Margin="0,5"/>
-                <Button WidthRequest="165" Text="Reset Password" Command="{Binding GoResetPage}" FontSize="18" Margin="0,5" Grid.Column="1"/>
+                <Button WidthRequest="165" Text="Sign Up" Command="{Binding GoSignUpPage}" FontSize="18" Margin="0,5" Grid.ColumnSpan="2"/>
+                <!--<Button WidthRequest="165" Text="Reset Password" Command="{Binding GoResetPage}" FontSize="18" Margin="0,5" Grid.Column="1"/>-->
             </Grid>
         </StackLayout>
     </ContentPage.Content>
