--- a/Admin Interface/AdminInterface/AdminInterface/wwwroot/css/site.css
+++ b/Admin Interface/AdminInterface/AdminInterface/wwwroot/css/site.css
@@ -604,6 +604,10 @@ button.accept-policy {
     box-shadow: inset 5px 5px 4px #fff, 5px 5px 3px rgb(225, 225, 225);
 }
 
+.productContainer:hover {
+    background-color: rgb(250, 250, 250);
+}
+
 .productImage {
     width: 80%;
     display: block;
