Admin: Product Details Image

--- a/Admin Interface/AdminInterface/AdminInterface/Views/Products/Create.cshtml
+++ b/Admin Interface/AdminInterface/AdminInterface/Views/Products/Create.cshtml
@@ -66,3 +66,6 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+
+<script>let activePageIndex = 3;</script>
