--- a/Admin Interface/AdminInterface/AdminInterface/Views/Products/Edit.cshtml
+++ b/Admin Interface/AdminInterface/AdminInterface/Views/Products/Edit.cshtml
@@ -73,3 +73,5 @@
     @section Scripts {
         @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     }
+
+<script>let activePageIndex = 3;</script>
