--- a/Admin Interface/AdminInterface/AdminInterface/Views/Orders/Create.cshtml
+++ b/Admin Interface/AdminInterface/AdminInterface/Views/Orders/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AdminInterface.Models.Orders
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Orders";
 }
 
 <h1>Create</h1>
