--- a/Admin Interface/AdminInterface/AdminInterface/Views/Orders/Details.cshtml
+++ b/Admin Interface/AdminInterface/AdminInterface/Views/Orders/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AdminInterface.Models.Orders
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Orders";
 }
 
 <h1>Details</h1>
