--- a/Admin Interface/AdminInterface/AdminInterface/Views/Orders/Index.cshtml
+++ b/Admin Interface/AdminInterface/AdminInterface/Views/Orders/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<AdminInterface.Models.Orders>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Orders";
 }
 
 <h1>Index</h1>
