--- a/Admin Interface/AdminInterface/AdminInterface/Views/Products/Delete.cshtml
+++ b/Admin Interface/AdminInterface/AdminInterface/Views/Products/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AdminInterface.Models.Products
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Products";
 }
 
 <h1>Delete</h1>
