--- a/Admin Interface/AdminInterface/AdminInterface/Views/Products/Details.cshtml
+++ b/Admin Interface/AdminInterface/AdminInterface/Views/Products/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AdminInterface.Models.Products
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Products";
 }
 
 <h1 style="padding-top:20px;">Details</h1>
