--- a/Admin Interface/AdminInterface/AdminInterface/Views/Products/Edit.cshtml
+++ b/Admin Interface/AdminInterface/AdminInterface/Views/Products/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AdminInterface.Models.Products
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Products";
 }
 
 <h1>Edit</h1>
