--- a/Admin Interface/AdminInterface/AdminInterface/Views/Products/Index.cshtml
+++ b/Admin Interface/AdminInterface/AdminInterface/Views/Products/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<AdminInterface.Models.Products>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Products";
 }
 
 <h1>Index</h1>
