--- a/Admin Interface/AdminInterface/AdminInterface/Views/Reviews/Create.cshtml
+++ b/Admin Interface/AdminInterface/AdminInterface/Views/Reviews/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AdminInterface.Models.Reviews
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Reviews";
 }
 
 <h1>Create</h1>
