--- a/Admin Interface/AdminInterface/AdminInterface/Views/Reviews/Index.cshtml
+++ b/Admin Interface/AdminInterface/AdminInterface/Views/Reviews/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<AdminInterface.Models.Reviews>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Reviews";
 }
 
 <h1>Index</h1>
