--- a/Admin Interface/AdminInterface/AdminInterface/Views/Shared/_Layout.cshtml
+++ b/Admin Interface/AdminInterface/AdminInterface/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <div class="navDropdownMenuBtnLine close"></div>
             </div>
 
-            <div id="navTitle"><a href="">Dashboard</a></div>
+            <div id="navTitle">@ViewData["Title"]</div>
 
             <!-- end left side -->
             <!-- right side -->
