--- a/Admin Interface/AdminInterface/AdminInterface/Views/Orders/Delete.cshtml
+++ b/Admin Interface/AdminInterface/AdminInterface/Views/Orders/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AdminInterface.Models.Orders
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Orders";
 }
 
 <h1>Delete</h1>
