--- a/Admin Interface/AdminInterface/AdminInterface/Views/Products/Create.cshtml
+++ b/Admin Interface/AdminInterface/AdminInterface/Views/Products/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AdminInterface.Models.Products
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Products";
 }
 
 <h1>Create</h1>
