--- a/Admin Interface/AdminInterface/AdminInterface/Views/Reviews/Details.cshtml
+++ b/Admin Interface/AdminInterface/AdminInterface/Views/Reviews/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AdminInterface.Models.Reviews
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Reviews";
 }
 
 <h1>Details</h1>
